# kms-siprtpendpoint

./: AUTHORS  CMakeLists.txt  README.md  gstreamer_2nd_newly_connected.dot  prepare_project.sh
.devcontainer/: Dockerfile  devcontainer.json  repo_cfg
.github/workflows/: build_kurento_docker_image.yml  build_kurento_java_client.yml  build_kurento_js_client.yml  build_kurento_module.yml  cleanup.yml  publish_release.yml  push_release.yml  release.yml
DTLS_patch/: openssl111.patch  patch_openssl.sh
DTLS_patch/docker/: Dockerfile
ci-scripts/docker/: Dockerfile  extended_entrypoint.sh  repo_cfg.tpl  tracedump_gdb.sh
debian/: changelog  control  copyright  kms-siprtpendpoint.install  rules
docker/: Dockerfile  extended_entrypoint.sh
src/gst-plugins/: CMakeLists.txt
src/gst-plugins/siprtpendpoint/: CMakeLists.txt  kmsrtpfilterutils.c  kmsrtpfilterutils.h  kmssiprtpconnection.c  kmssiprtpconnection.h  kmssiprtpendpoint.c  kmssiprtpendpoint.h  kmssiprtpsession.c  kmssiprtpsession.h  kmssipsrtpconnection.c  kmssipsrtpconnection.h  kmssipsrtpsession.c  kmssipsrtpsession.h  trafficshaper.c  trafficshaper.h
src/server/: CMakeLists.txt
src/server/config/: SipRtpEndpoint.conf.ini
src/server/implementation/gst-plugins/siprtpendpoint/: CMakeLists.txt  kmssiprtpconnection.c  kmssiprtpconnection.h  kmssiprtpendpoint.c  kmssiprtpendpoint.h
src/server/implementation/objects/: ComposedObjectImpl.cpp  ComposedObjectImpl.hpp  FacadeRtpEndpointImpl.cpp  FacadeRtpEndpointImpl.hpp  SipRtpEndpointImpl.cpp  SipRtpEndpointImpl.hpp
src/server/interface/: package.json  pom.xml  siprtp.SipRtpEndpoint.kmd.json  siprtp.kmd.json
tests/: CMakeLists.txt
tests/check/: CMakeLists.txt
tests/check/element/: CMakeLists.txt  siprtpendpoint.c  siprtpendpoint_audio.c  sipsrtp.c
tests/server/: CMakeLists.txt  CryptoSuite.hpp  SDES.hpp  codecsConfig.cpp  constructors.cpp  eventForwarding.cpp  firstBufferLost.cpp  publicIp.cpp  sipRtpEndpoint.cpp  sipRtpEndpointConcurrent.cpp  sipRtpEndpointPlay.cpp  sipRtpEndpoint_agnostic_srtp.cpp  sourceConnections.cpp
